fix: spawn process output redirection failure