@@ -58,13 +58,17 @@ public class IOSUnitTest {
 
     private URL getURL() {
         try {
-            return new URL("{{remoteAddress}}");
+            // return new URL("{{remoteAddress}}");
+            return Paths.get("{{remoteAddress}}").toUri().toURL();
         } catch (MalformedURLException e) {
-            e.printStackTrace();
+            // e.printStackTrace();
+            System.out.println("Error creating URL1 " + e.toString());
+            log.error("Error creating URL", e);
         }
+        return null;
     }
 
-    public String getSessionId(IOSDriver driver){
+    public String getSessionId(IOSDriver driver) {
         String sessionId;
         try {
             sessionId = driver.getSessionId().toString();
@@ -89,8 +93,10 @@ public class IOSUnitTest {
             HttpResponse<JsonNode> jsonNodeHttpResponse = Unirest.post(url)
                     .header("Content-Type", "application/json")
                     .body(body).asJson();
-        } catch (Exception e){
-            System.out.println("Failed to set Test info");
+        } catch (Exception e) {
+            // e.printStackTrace();
+            System.out.println("Failed to set Test info1");
+            log.error("Error set Test Info2", e);
         }
     }
 
